Sudah Update Scroll Scroll gun

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="todo">TODO</string>
     <string name="sign_up_with_google">Sign Up With Google</string>
     <string name="tv_title">Title</string>
+    <string name="greeve_writer">Greeve Writer</string>
+    <string name="greeve_writer_name">Rayhan A</string>
+    <string name="tv_title_videos">Title Videos</string>
+    <string name="article_title">Article Title</string>
+    <string name="todo">TODO</string>
 </resources>
