--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,40 +11,5 @@
     <string name="greeve_writer_name">Rayhan A</string>
     <string name="tv_title_videos">Title Videos</string>
     <string name="article_title">Article Title</string>
-
-    <string name="title_article1">Lerak sebagai alternatif deterjen dan sabun</string>
-    <string name="desc_article1">\tLerak atau yang biasa disebut soapberries atau soapnuts ini adalah buah yang bentuknya mirip seperti kacang walnut dan tumbuhnya di pohon yang tingginya mencapai 10 meter. Indonesia kaya sekali dengan tanaman ini karena tanah dan iklimnya.\n
-
-        \tBuah ini dikenal karena kegunaan bijinya yang dipakai sebagai bahan pencuci tradisional. Paling banyak digunakan untuk mencuci bahan batik demi menjaga kualitasnya. Hanya saja, lerak ini hanya dikenal sebatas sebagai pencuci alami batik yang alami padahal sebenarnya buah ini punya kegunaan yang jauh lebih banyak dari pencuci batik. Biasanya bahan pencuci batik ini sudah diramu dan cair yang dijual di kemasan botol. Sedangkan lerak yang akan kami bicarakan dibawah ini benar-benar langsung digunakan dari buahnya.\n
-
-        \tBiji lerak mengandung saponin dan saponin inilah yang menghasilkan busa dan berfungsi sebagai bahan pencuci. Dapat pula digunakan sebagai bahan pembersih lantai, ruangan, rambut, muka dan bahkan membersihkan binatang peliharaan.\n
-        \tManfaat Lerak?\n
-
-        \tLerak ini 100 persen alami dan biodegradable terutama karena serangga secara alami menjauhi saponin, jadi tidak perlu pestisida di dalam budidaya mereka. Mereka juga antimikroba, aman untuk pembersihan, hypoallergenic dan cukup lembut untuk digunakan pada kulit sensitif, serta pakaian bayi. Buah berry ini memiliki aroma seperti buah nanas, tetapi ketika mereka digunakan dalam mencuci, mereka tidak meninggalkan aroma sama sekali. Less packaging energy dan processing.\n
-        \tKenapa harus beralih ke pembersih natural (Lerak)?\n
-
-        \tKebanyakan produk konvensional itu mengandung senyawa kimia dan perfume artifical yang bisa berbahaya oleh tubuh. Terutama saat dihirup dan masuk ke dalam tubuh melalui kulit. Bisa menyebabkan iritasi dan juga hormon disruptions. Selain itu karena senyawa yang dikandungnya, tanah, hewan dan tumbuhan juga tidak bisa memprosesnya dengan baik. Ini adalah salah satu heavy carbon foot print yang bisa mengintervensi pertumbuhan laut. Beberapa deterjen juga mengandung microbeads (plastik). Intinya apa-apa yang tidak natural sudah pasti akan sulit dicerna ditubuh juga dibumi.\n
-        \tBagaimana cara memanfaatkannya dan untuk apa?\n
-
-        \tBanyak sekali manfaatnya untuk pembersih, bisa dibilang pembersih apapun. Untuk yang terbiasa dengan busa melimpah, mungkin di masa transisi akan agak boros karena busa lerak yang tidak sebanyak sabun biasa.\n
-
-        \tSetiap berry bisa digunakan 6-8 kali tergantung penggunannya. 3/4 kg buah lerak bisa menghasilkan 6 liter sabun lerak siap pakai.\n
-        \t1.Laundry\n
-
-        \tLerak biasanya dijual dalam kantong kain yang bisa ditaruh begitu saja di mesin cuci bersama dengan cucian. Sebagai alternatif, buah juga bisa dimasukkan ke dalam kaus kaki yang mau dicuci, untuk efek yang sama. Jumlah yang harus digunakan tergantung pada seberapa penuh muatan cucian dan seberapa kotor pakaian-pakaian di dalamnya.\n
-
-        \tSaponin dalam buah berry dilepaskan lebih efektif pada suhu yang lebih tinggi. Jika kalian mencuci dengan air dingin, cukup rendam seluruh tas kain (atau kaus kaki) yang berisi buah beri dalam mangkuk air panas selama beberapa saat sebelum dilempar ke tempat cuci. Tambahkan air yang diisi saponin dari mangkuk ke tempat cuci juga.\n
-
-        \tSabun berry dapat digunakan kembali, selama masih mengandung saponin. Untuk menguji, peras mereka saat basah, dan jika masih ada cairan berbusa, artinya mereka masih dapat digunakan lagi. Gunakan buah sabun baru untuk beban penuh atau sangat ternoda, dan gunakan kembali untuk beban ringan yang tidak mengandung banyak kotoran.\n
-
-        \tSaat mencuci putih, terutama putih bernoda berat, bisa ditambahkan cuka atau soda kue untuk daya pembersih ekstra.\n
-
-        \tSelama siklus bilas mesin cuci, saponin bertindak sebagai pelembut kain alami. Jika ingin menambahkan wewangian ke cucian, coba tambahkan beberapa tetes minyak esensial favorit ke dalam kantong kain yang berisi buah berry.\n
-        \t2. Dish soap, pel, shampoo, dll\n
-
-        \tRebus buah selama sekitar 10 menit dalam air hingga buah lunak dan bisa lepas dari bijinya. Gunakan satu lusin buah untuk sekitar setengah liter (500 ml) air, dan tambahkan beberapa tetes minyak esensial lemon atau perasan lemon atau esensial oil favorit kalian setelah cairan dingin. Cairan ini bisa digunakan untuk mencuci piring dan juga tangan. Kekurangan dari sistem ini adalah busa yang dikeluarkan tidak terlalu banyak. Sabun cair dari proses perebusan ini lebih tahan lama daya simpannya cocok untuk yang ingin membuat stok banyak.\n
-
-        \tSelain direbus ada juga cara rendaman. Caranya dengan merendam leraknya hingga lunak, potong potong dengan kuku atau pisau kecil. Kemudian bisa diambil beberapa butir sesuai kebutuhan, cungkil, campur dengan air sampai menghasilkan busa, kucek dan busakan. Atau jika ingin sekalian banyak, letakkan potongan-potongan lerak ke dalam kantong bersih dan peras hingga menghasilkan lebih banyak busa. Konon dengan cara ini busanya jadi lebih melimpah.\n
-
-        \tAtau bisa juga mengambil jalan tengah antara merebus dan merendam yaitu melakukan keduanya. Lerak bisa direbus dengan api kecil selama sekitar 1,5-2 jam supaya buah lerak menjadi sangat lunak dan mudah dihancurkan. Lerak akan melunak tapi tidak hancur. Setelah dingin, daging buah lerak akan mudah dipisahkan dari biji dan disuwir kecil-kecil. Saat proses ini, busa lerak keluar sangat banyak. Sehingga tidak perlu diblender. Cukup dengan meremas dan mengkucek, menambahkan air seperlunya dan memasukkannya ke botol dengan corong dan saringan. Sisa buahnya jangan dibuang karena masih mengandung saponin. Bisa digunakan dan dikucek untuk mencuci yang kecil-kecil, seperti cuci piring.\n</string>
+    <string name="link1">https://greevelaw.files.wordpress.com/2020/02/screenshot_2020-02-21-mengurangi-sampah-popok-mengolahnya-menjadi-pupuk-e28094-zerowaste-id.png</string>
 </resources>
