--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="gv_login_desc"> Manfaatkan sampah dengan kreatifitasmu. \n
         Selamatkan lingkungan bersama \n Aplikasi Greeve!</string>
     <string name="todo">TODO</string>
-    <string name="sign_up_with_google">Sign Up With Google</string>
+    <string name="sign_up_with_google">Mulai dengan Akun Google</string>
     <string name="tv_title">Title</string>
     <string name="greeve_writer">Greeve Writer</string>
     <string name="greeve_writer_name">Rayhan A</string>
